force-app/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <description>Phase 1 - Created Competitors object from Opportunity to Account</description>
    <label>Competitor and Incumbent</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Competitors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors and Incumbents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>