force-app/main/default/objects/Competitor__c/fields/Competitive_Advantage__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Advantage__c</fullName>
    <description>Phase 1 - Replaced Incumbent Section on Oppty.</description>
    <inlineHelpText>What is our competitive advantage over our primary competitors? (3%)</inlineHelpText>
    <label>Competitive Advantage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>