force-app/main/default/objects/Competitor__c/fields/Competitive_Status__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Status__c</fullName>
    <inlineHelpText>What is our current position against our competitors? (3%)</inlineHelpText>
    <label>Competitive Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Behind Competition</fullName>
            </value>
            <value>
                <fullName>Even with the Competition</fullName>
            </value>
            <value>
                <fullName>Ahead of Competition</fullName>
            </value>
            <value>
                <fullName>Vendor of Choice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>