force-app/main/default/objects/Competitor__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <description>New competitor name requested by sales optimisation</description>
    <label>Competitor Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AaE</fullName>
            </value>
            <value>
                <fullName>Access Prepaid</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>ARK Express</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>ATO Clearing house</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Bpay</fullName>
            </value>
            <value>
                <fullName>Bpoint</fullName>
            </value>
            <value>
                <fullName>Cards</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cash Passport</fullName>
            </value>
            <value>
                <fullName>CBA</fullName>
            </value>
            <value>
                <fullName>Couriers Please</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>DHL International</fullName>
            </value>
            <value>
                <fullName>Digital Delivery</fullName>
            </value>
            <value>
                <fullName>Edentiti</fullName>
            </value>
            <value>
                <fullName>Experion</fullName>
            </value>
            <value>
                <fullName>Fastway</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>FedEx International</fullName>
            </value>
            <value>
                <fullName>Green ID</fullName>
            </value>
            <value>
                <fullName>Internal Fulfillment</fullName>
            </value>
            <value>
                <fullName>Internet Banking</fullName>
            </value>
            <value>
                <fullName>NAB</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Bank</fullName>
            </value>
            <value>
                <fullName>Other Clearing House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>