force-app/main/default/objects/Competitor__c/fields/Competitor_Type__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Type__c</fullName>
    <inlineHelpText>What type of competition are we up against? (4%)</inlineHelpText>
    <label>Competitor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Incumbent</fullName>
            </value>
            <value>
                <fullName>No Competitor Identified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>