force-app/main/default/objects/Competitor__c/fields/Incumbent_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Satisfaction__c</fullName>
    <description>Phase 1 - Replaced Incumbent Section on Oppty.</description>
    <inlineHelpText>Is party satisfied with Incumbent? Would they change?</inlineHelpText>
    <label>Incumbent Satisfaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>