force-app/main/default/objects/Competitor__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <description>Phase 1 - Holds Opportunity Id for the Competitors related list in Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competitors and Incumbents</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>