force-app/main/default/objects/Competitor__c/validationRules/Competitor_or_Incumbent.validationRule-meta.xml
<ValidationRule>
    <fullName>Competitor_or_Incumbent</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(Competitor_Type__c, &quot;No Competitor Identified&quot;) &amp;&amp; ISPICKVAL( Competitor_Name__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Competitor_Name__c</errorDisplayField>
    <errorMessage>Please select the Competitor / Incumbent</errorMessage>
</ValidationRule>