force-app/main/default/objects/Competitor__c/validationRules/Not_Competitor_or_Incumbent.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Competitor_or_Incumbent</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Competitor_Type__c, &quot;No Competitor Identified&quot;) &amp;&amp; Not( ISPICKVAL( Competitor_Name__c , &quot;&quot;) )</errorConditionFormula>
    <errorDisplayField>AccountId__c</errorDisplayField>
    <errorMessage>Leave the Competitor field blank</errorMessage>
</ValidationRule>